name = "reservation-5"
version = "0.1.0"
description = ""
authors = ["Anastasiya <myhopadik@mail.ru>"]
readme = "README.md"
packages = [{include = "reservation_5"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.96.0"
uvicorn= "^0.22.0"
sqlalchemy = "^2.0.15"
alembic = "^1.11.1"
psycopg2-binary = "^2.9.6"
asyncpg = "^0.27.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
